--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,24 @@
 {
-    "name": "minimal-express-app",
+    "name": "surgical-schedule-backend",
     "version": "1.0.0",
-    "description": "Minimal Express app with scalable structure",
+    "description": "Express backend for surgical schedule management with REST, GraphQL, and WebSockets",
     "main": "src/server.js",
     "scripts": {
         "start": "node src/server.js",
         "dev": "nodemon src/server.js",
         "test": "jest",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "openapi": "node generate_openapi.js"
     },
     "dependencies": {
         "cors": "2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "express-graphql": "^0.12.0",
+        "graphql": "^16.8.1",
         "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.1"
+        "swagger-ui-express": "^5.0.1",
+        "ws": "^8.18.0"
     },
     "devDependencies": {
         "eslint": "^9.24.0",
