--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,19 +1,10 @@
+# Database connection (for future persistence integration)
+# For MongoDB (example):
+MONGODB_URI=mongodb://localhost:27017/surgical_schedule
+
 # Server
 PORT=3000
 HOST=0.0.0.0
 
 # Node environment
 NODE_ENV=development
-
-# Microsoft SQL Server (primary DB) - fill these to enable MSSQL connectivity
-# IMPORTANT: Do not commit real credentials. This file is only an example.
-MSSQL_SERVER=localhost
-MSSQL_DATABASE=surgical_schedule
-MSSQL_USER=sa
-MSSQL_PASSWORD=yourStrong(!)Password
-# Optional settings
-MSSQL_PORT=1433
-# Encrypt should generally be true (Azure). Set to false for some local setups.
-MSSQL_ENCRYPT=true
-# Trust self-signed certificates in local/dev (use with caution).
-MSSQL_TRUST_SERVER_CERTIFICATE=false
