--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,6 @@
         "express": "^4.18.2",
         "express-graphql": "^0.12.0",
         "graphql": "^16.8.1",
-        "mssql": "^9.3.2",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
         "ws": "^8.18.0"
@@ -28,9 +27,7 @@
         "nodemon": "^3.0.1"
     },
     "nodemonConfig": {
-        "watch": [
-            "src"
-        ],
+        "watch": ["src"],
         "ignore": [
             "node_modules",
             "package.json",
